--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -9,7 +9,8 @@
     z-index: 100;
     padding: 0.7rem 2rem;
     display: flex;
-    justify-content: space-between;
+    grid-gap: 1rem;
+    // justify-content: space-between;
     align-items: center;
     .logo,
     .logo_small {
@@ -18,7 +19,20 @@
     .logo_small {
       display: none;
     }
+    & .links {
+      a {
+        font-size: 1.1rem;
+        font-weight: 500;
+        padding: 0.5rem 1rem;
+        border-radius: 2rem;
+        &:hover {
+          background: rgba(0, 0, 0, 0.05);
+        }
+      }
+    }
     .profile {
+      margin: auto;
+      margin-right: 0;
       position: relative;
       z-index: 10;
       img {
@@ -102,6 +116,10 @@
           .icon {
             svg {
               transform: translate(-10%, -3%);
+              #Rectangle_4 {
+                stroke: $blue;
+                fill: $blue;
+              }
             }
           }
         }
@@ -169,6 +187,18 @@
     background: white;
     border-radius: 0.7rem;
     display: grid;
+    .name {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: 500;
+      text-transform: capitalize;
+    }
+    .userTypeSwitch {
+      margin: 1.5rem auto;
+    }
+    & > a {
+      text-align: right;
+    }
     .link {
       font-weight: 500;
       color: $blue;
@@ -180,7 +210,7 @@
       }
     }
     .link:not(:last-child) {
-      margin-bottom: 1rem;
+      // margin-bottom: 1rem;
     }
     button {
       border: none;
@@ -204,7 +234,7 @@
       }
     }
     .logout {
-      border-radius: 0 0 0.7rem 0.7rem;
+      border-radius: 0 0 0.4rem 0.4rem;
       min-width: 10rem;
       cursor: pointer;
       display: flex;
@@ -435,6 +465,31 @@
     }
   }
 }
+.userTypeSwitch {
+  margin: auto;
+  align-items: center;
+  display: flex;
+  grid-gap: 0.5rem;
+  label {
+    font-size: 0.8rem;
+    color: rgba(0, 0, 0, 0.6);
+  }
+  .options {
+    cursor: pointer;
+    border-radius: 3rem;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    display: flex !important;
+    background: rgba(0, 0, 0, 0.02);
+    li {
+      padding: 0.5rem 1.5rem;
+      &.active {
+        border-radius: 2rem;
+        background: $blue;
+        color: white;
+      }
+    }
+  }
+}
 .profile {
   display: flex;
   img {
@@ -471,15 +526,30 @@
       }
     }
     &.avatar {
-      height: 3rem;
-      width: 3rem;
+      // height: 3rem;
+      width: max-content;
       button {
+        width: max-content;
+        align-items: center;
+        display: flex;
         padding: 0;
         img {
+          order: 2;
+          flex-shrink: 0;
           height: 3rem;
           width: 3rem;
           border-radius: 50%;
           opacity: 1;
+          border: 2px solid $blue;
+        }
+        .userTypeTag {
+          border-radius: 2rem;
+          margin-right: -1rem;
+          order: 1;
+          padding: 0.3rem 0.7rem;
+          padding-right: 1.5rem;
+          background: $blue;
+          color: white;
         }
       }
     }
@@ -635,117 +705,6 @@
           li {
             grid-template-columns: 8rem 1rem 8rem;
           }
-        }
-      }
-    }
-  }
-}
-
-.productContainer {
-  padding: 0 1rem;
-  .benner {
-    padding: 1rem 0;
-    font-size: 1.2rem;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    button {
-      background: $blue;
-      color: white;
-      border: 2px solid $blue;
-      padding: 0.5rem 1rem;
-      border-radius: 2rem;
-      outline: none;
-      svg {
-        line {
-          stroke: white;
-        }
-      }
-      display: flex;
-      grid-gap: 0.5rem;
-      align-items: center;
-      font-weight: 600;
-      font-size: 1rem;
-      &:hover {
-        background: white;
-        color: $blue;
-        svg {
-          line {
-            stroke: $blue;
-          }
-        }
-      }
-    }
-  }
-  .products {
-    max-width: 85rem;
-    display: grid;
-    grid-gap: 1rem;
-    .placeholder {
-      border-radius: 0.7rem;
-      padding: 3rem 1rem;
-      background: rgba(0, 0, 0, 0.03);
-      text-align: center;
-      color: rgba(0, 0, 0, 0.5);
-      font-style: italic;
-    }
-    .product {
-      padding: 0.5rem;
-      border-radius: 0.7rem;
-      background: $lightGreen2;
-      display: flex;
-      align-items: center;
-      grid-gap: 1rem;
-      position: relative;
-      img {
-        height: 4rem;
-        width: 4rem;
-        object-fit: contain;
-        border: 1px solid rgba(0, 0, 0, 0.07);
-        background: white;
-      }
-      .name {
-        font-size: 1.1rem;
-        font-weight: 500;
-      }
-      .dscr {
-        font-size: 0.8rem;
-        color: rgba(0, 0, 0, 0.5);
-        margin-bottom: 0.3rem;
-      }
-      .price {
-        font-weight: 500;
-      }
-      .btns {
-        position: absolute;
-        right: 0.5rem;
-        display: none;
-        grid-gap: 0.25rem;
-        outline: none;
-        button {
-          cursor: pointer;
-          border: 2px solid $blue;
-          background: $blue;
-          color: white;
-          padding: 0.2rem 1rem;
-          border-radius: 2rem;
-          &.delete {
-            background: $red;
-            border-color: $red;
-          }
-          &:hover {
-            background: none;
-            color: $blue;
-            &.delete {
-              color: $red;
-            }
-          }
-        }
-      }
-      &:hover {
-        .btns {
-          display: grid;
         }
       }
     }
@@ -1091,68 +1050,6 @@
     margin: 1.5rem;
     min-width: 25rem;
     box-shadow: none;
-  }
-}
-
-.modal.productForm {
-  max-width: 45rem;
-  form {
-    padding: 2rem;
-    display: grid;
-    grid-template-columns: 1fr 5rem;
-    grid-gap: 2rem;
-    grid-column-gap: 1rem;
-    section {
-      label {
-        display: block;
-        font-size: 0.8rem;
-        color: rgba(0, 0, 0, 0.7);
-      }
-      input,
-      textarea {
-        font-size: 1rem;
-        width: 100%;
-        border: none;
-        outline: none;
-        padding: 0.5rem 0;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-        &:focus {
-          border-color: $blue;
-        }
-        resize: none;
-      }
-    }
-    .dscr {
-      grid-column: 1/3;
-      textarea {
-        height: 7rem;
-      }
-    }
-    button {
-      grid-column: 1/3;
-      width: max-content;
-      padding: 0.7rem 2.5rem;
-      border: none;
-      color: white;
-      margin: auto;
-      margin-right: 0;
-      margin-top: 2rem;
-      border-radius: 2rem;
-      cursor: pointer;
-      & {
-        background: linear-gradient(139deg, $blue 0%, rgb(11, 26, 69) 150%);
-        &:hover {
-          font-weight: bold;
-          color: $blue;
-          background: none;
-          box-shadow: inset 0 0 0 2px $blue;
-        }
-      }
-    }
-    &.loading {
-      pointer-events: none;
-      opacity: 0.7;
-    }
   }
 }
 
@@ -1915,7 +1812,7 @@
     h4 {
       font-size: 1.25rem;
       font-weight: 400;
-      text-transform: capitalize;
+      // text-transform: capitalize;
       color: rgba(0, 0, 0, 0.75);
       &.amount {
         color: rgba(0, 0, 0, 0.6);
@@ -1936,6 +1833,10 @@
 .disputeForm,
 .userReport,
 .ticketReplyFormModal,
+.modal.productForm,
+.modal.fileUpload,
+.singleOrder,
+.issueRefund,
 .ticketFormModal {
   max-width: 35rem;
   form {
@@ -1998,6 +1899,11 @@
             }
           }
         }
+      }
+    }
+    .images {
+      label {
+        margin-bottom: 0.7rem;
       }
     }
   }
@@ -2215,6 +2121,7 @@
 .thumbs {
   margin: auto;
   display: flex;
+  flex-wrap: wrap;
   grid-gap: 0.5rem;
   overflow-x: auto;
   .videoThumb,
@@ -2277,7 +2184,7 @@
     max-height: calc((var(--vh) * 100) - 5.5rem - 4rem);
     img,
     video {
-      height: calc((var(--vh) * 100) - 5.5rem - 4rem);
+      max-height: calc((var(--vh) * 100) - 5.5rem - 4rem);
       max-width: calc(100vw - 4rem);
     }
     audio {
