--- a/client/src/components/styles/hold.scss
+++ b/client/src/components/styles/hold.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 .holdContainer {
-  margin-left: 3rem;
+  margin: 0 1.5rem;
   .head {
     z-index: 10;
     position: sticky;
